# sct-mem-api

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example_program/: CMakeLists.txt
example_program/attacker/src/: main.c
example_program/test/src/: main.c
src/: sct-mem-api.c  sct-mem-api.h
